# Polarmote

./: .flutter-plugins-dependencies  .gitignore  OPTIMIZATION_PLAN.md  Polarmote_state.json  README.md  analysis_options.yaml  package-lock.json  package.json  pubspec.yaml  stage_templates.md  stdout.txt  summary.md
.github/workflows/: release.yml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: mobile_startup_gate.dart  polarmote_app.dart  single_instance.dart  system_tray_manager.dart
lib/errors/: app_error.dart  errors.dart
lib/events/: event_bus.dart  events.dart
lib/old_polarmote/: .gitignore  README.md  analysis_options.yaml  package-lock.json  package.json  pubspec.yaml
lib/providers/: host_book_provider.dart  script_provider.dart  session_provider.dart  settings_provider.dart  transfer_provider.dart
lib/services/: server_metrics.dart  server_monitor_service.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
native/polarmote_native_core/: Cargo.toml  README.md
native/polarmote_native_core/.cargo/: config.toml
native/polarmote_native_core/scripts/: build_android_libs.ps1  build_android_libs.sh  build_desktop_libs.ps1  build_desktop_libs.sh  build_ios_lib.sh
native/polarmote_native_core/scripts/perl_lib/ExtUtils/: MakeMaker.pm
native/polarmote_native_core/scripts/perl_lib/Locale/Maketext/: Simple.pm
native/polarmote_native_core/scripts/perl_lib/Pod/: Usage.pm
native/polarmote_native_core/src/: executor.rs  ffi.rs  lib.rs  local_metrics.rs  pty.rs
native/polarmote_native_core/src/ffi/: terminal_pty.rs
native/polarmote_native_core/src/runtime/: mod.rs  provider.rs
native/polarmote_native_core/src/shell/: data_object.rs  ffi.rs  mod.rs  stream.rs
native/polarmote_native_core/src/transport/: sftp.rs
test/: widget_test.dart
test_stress/: README.md  monitor_throttle.ps1  monitor_throttle_new.ps1  run_stress_curl.ps1
web/: index.html  manifest.json
windows/: CMakeLists.txt  ensure_super_native_precompiled.cmake
(+348 files in other folders)
