[package]
name = "polarmote_native_core"
version = "0.1.0"
edition = "2021"

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
base64 = "0.22"
crossbeam-channel = "0.5"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Use libssh instead of libssh2 for better algorithm support
[target.'cfg(windows)'.dependencies]
libssh-rs = { version = "0.3", default-features = false, features = ["vendored", "vendored-openssl"] }

[target.'cfg(not(windows))'.dependencies]
libssh-rs = { version = "0.3", default-features = false, features = ["vendored", "vendored-openssl"] }

[target.'cfg(not(target_os = "ios"))'.dependencies]
portable-pty = "0.9"

# windows crate removed — COM interfaces implemented via raw extern "system" FFI
# in the shell module. Kept as an empty entry to avoid cargo errors.
[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = ["implement", "Win32_Foundation"]

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]

[profile.dev]
incremental = true
debug = 0

[profile.release]
incremental = true
debug = 1
